test/tests/stages/18_structures/valid/params_and_returns/libraries/missing_retval_client.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: big
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: arr
            Array: 
              TLong: 25
              Char: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: missing_return_value
        List[1]: 
          TIdentifier: i
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Int: 
          Structure: 
            TIdentifier: big
            Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: array
                  CCompoundInit: 
                    List[4]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 3
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 4
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 4
                    Int: 
                  None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: missing_return_value
                  List[1]: 
                    CBinary: 
                      CAdd: 
                      CVar: 
                        TIdentifier: array
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      None: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: array
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
