test/tests/stages/18_structures/invalid_types/initializers/initialize_struct_member_wrong_type.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: char_ptr
            Pointer: 
              SChar: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[13]: 
                              TChar: 73
                              TChar: 116
                              TChar: 39
                              TChar: 115
                              TChar: 32
                              TChar: 97
                              TChar: 32
                              TChar: 115
                              TChar: 116
                              TChar: 114
                              TChar: 105
                              TChar: 110
                              TChar: 103
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
